src/pydjinni/generator/objc/it/swift/error/expected/include/objc/TSTBarError.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
FOUNDATION_EXPORT NSErrorDomain const TSTBarErrorDomain;
typedef NS_ERROR_ENUM(TSTBarErrorDomain, TSTBarError) {
    TSTBarErrorOldErrorCode
    DEPRECATED_MSG_ATTRIBUTE("error code is old")
}
DEPRECATED_MSG_ATTRIBUTE("error domain is old")
NS_SWIFT_NAME(BarError);

